--- a/css/sitespecific.css
+++ b/css/sitespecific.css
@@ -75,7 +75,7 @@
     background-color: #212121;
 }
 .btn {
-    padding: 10px 30px 10px 30px;
+    padding: 5px 20px;
     border: 2px solid #E0F2F1;
     font-size: 16px;
     /*box-shadow: inset 0 -6px rgba(0,0,0,0.2);*/
@@ -122,4 +122,24 @@
 }
 #formStyle :-ms-input-placeholder {
     color: #B2DFDB;
+}
+
+p {
+  margin-bottom: 0px;
+}
+
+.appBox {
+  padding: 16px;
+  margin-bottom: 8px;
+  border-radius: 8px;
+}
+
+.highlighted {
+  background-color: #f5f5f5;
+}
+
+h2 {
+  margin-top: 0px;
+  margin-bottom: 8px;
+  font-size: 24px;
 }
